src/test/deca/syntax/valid/perso/commentaire_mono_ligne.deca
// Description:
//    Programme minimaliste utilisant un commentaire mono-ligne.
//
// Resultats:
//    
//
// Historique:
//    cree le 04/01/2023

{
        //return("3")
        
}