src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_intruction_unary_expr_oubli_expr_-.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les unary_expr
//
// Resultats:
//    Ligne 11 : Erreur ( oubli unary_expr)
//    
//
// Historique:
//    cree le 04/01/2023
{
    -;
}